--- a/7.md
+++ b/7.md
@@ -1,39 +1,53 @@
-Tracklist:
+~ Tracklist:
 
-0:00 TV Blonde - Ocarina
+0:00 nobu loops - takara silva '88
 
-2:50 90sFlav - C a l l m e 
+1:01 jhfly - sheets
 
-4:33 τrngrsk - tome
+2:55 HM Surf x Lucid - Mt. Moon
 
-5:46 jhfly - yesterday
+4:07 s o u l o u e - in the air. 
 
-7:36 Toonorth - Liberosis
+5:13 leaf beach - sky high
 
-10:26 Ｓ ｌ ｕ ｍ ｇ ｏ ｄ - Dream 75 Years Of Time
+6:55 driver - drifting
 
-12:35 with u' - bloom
+8:31 tkdwn. - state of mind
 
-13:38 tusken - shabuya
+10:38 aimless - sometimes . . .
 
-15:46 joeshort - season
+11:38 jinsang - bliss
 
-17:06 F@ B ♒ - Abracadabra EP (First track)
+13:07 arbour - pine
 
-18:21 e e v e e — I wonder if we're dead
+14:43 hurlum - aye sun
 
-20:50 kasper - lifted
+16:30 mt. marcy - braids
 
-22:34 bdrx - late night vinyl sesh
+18:50 s o u l o u e - clouds.
 
-24:14 ｘａｎｉａｃ — let's run away together
+20:17 leaf beach - keef
 
-26:05 ycbej. — inure. [ w/ lester, nowhere ] 
+21:53 tusken. - nashua
 
-26:59 a x i a n - dreams.
+23:29 bessone - calm.
 
-28:32 submerse - snorlax
+24:46 Letsruntrack - Thunderbolt 404
 
-31:05 τrngrsk - reroll
+26:18 eevee & Made in M - Lone
 
-32:24 fantompower — all good things come to an end.
+28:57 Bob Le Head - goodnight
+
+30:10 knowmadic - someone
+
+32:24 Caleb Belkin - dreams
+
+33:30 chief. - who knows
+
+35:45 s o u l o u e - images.
+
+37:01 Toonorth - Dragonfruit
+
+39:45 TSURUDA - for matthew 
+
+42:55 jax - no time like. 
